@@ -18400,6 +18400,12 @@ fn test_invalid_sequences() {
     test_invalid(&[0xf3, 0x67, 0x0f, 0x3a, 0xf0, 0xfb, 0xb4]);
     test_invalid(&[0xf3, 0xf2, 0x0f, 0xae, 0x8f, 0x54, 0x3c, 0x58, 0xb7]);
     test_invalid(&[0xff, 0xd8]);
+
+    // vpmovm2b (and larger forms). for some reason the source operand is a mask register but uses
+    // modrm bits as a register selector. out-of-range `k` seem to just get masked down..
+    test_display(&[0x62, 0xd2, 0x7e, 0x08, 0x28, 0xc2], "vpmovm2b xmm0, k2");
+    test_display(&[0x62, 0xf2, 0x7e, 0x08, 0x28, 0xc1], "vpmovm2b xmm0, k1");
+
 }
 
 #[test]
